# FootballGameProject

./: CMakeLists.txt
src/: Game.cpp  Game.h  main.cpp
src/config/: Config.h
src/event/: Emitter.h  Event.h  EventBus.h
src/event/events/: ThrownPassEvent.h
src/event/events/football/entity/: FootballHitGroundEvent.h  PassCaughtEvent.h  ThrownPassEvent.h
src/input/: InputManager.h
src/scene/: Scene.h  TestScene.h
src/scene/football/: FootballScene.cpp  FootballScene.h
src/scene/football/camera/: Camera.cpp  Camera.h
src/scene/football/controller/: Controller.h  ControllerManager.h  PlayerController.h
src/scene/football/entity/: Entity.h
src/scene/football/entity/objects/: FootballEntity.cpp  FootballEntity.h
src/scene/football/entity/positions/: PositionEntity.cpp  PositionEntity.h  PositionEntityState.h
src/scene/football/entity/positions/QB/: QBEntity.h
src/scene/football/entity/positions/rating/: Ratings.h
src/scene/football/field/: FieldConstants.h  FieldPresets.h  FieldState.h  FootballField.cpp  FootballField.h  FootballFieldRenderer.h  Yard.h
src/scene/football/player/: Player.h
src/scene/football/route/: Route.h  RouteBuilder.h  RoutePresets.h
src/scene/football/state/: IState.h  StateMachine.h
src/scene/football/state/generic/: IdleState.h
src/scene/football/team/: DepthChart.h  Roster.h  Team.cpp  Team.h
src/scene/football/team/playcalling/: Formation.cpp  Formation.h  FormationSlot.h  Play.cpp  Play.h
src/scene/football/team/playcalling/formation/: Formation.cpp  Formation.h  FormationSlot.h
src/scene/football/team/playcalling/formation/presets/: GunFormationPresets.h
src/scene/football/team/roster/: DepthChart.cpp  DepthChart.h  Roster.cpp  Roster.h
src/scene/football/util/: FormationType.h  Position.h  Util.h
src/util/: Demangler.h  Logger.h  Rectangle.cpp  Rectangle.h
src/util/math/: Vector2D.cpp  Vector2D.h
